# dalek

./: .gitmodules  .travis.yml  setup.cfg  setup.py
dalek/: __init__.py  conftest.py  launcher.py  parameter_set.py  triangle.py  util.py
dalek/analysis/: __init__.py  base.py  visualize.py
dalek/base/: base.py  model.py  transform.py
dalek/fitter/: __init__.py  base.py  fitness_function.py  optimizers.py
dalek/fitter/tests/: default_conf.yml  setup_package.py  test_base_fitter.py  test_fitter_conf.yml  test_fitter_configuration.py
dalek/legacy/: launcher.py  parameter_set.py
dalek/parallel/: __init__.py  launcher.py  parameter_collection.py  parameter_set.py  util.py
dalek/parallel/tests/: test_launcher.py  test_parameter_set.py
dalek/priors/: base.py
dalek/priors/tests/: setup_package.py  test_priors.py
dalek/priors/tests/data/: prior_test.yml
dalek/tests/: test_parameter_set.py
docs/: index.rst  setup.rst
docs/setup/: c2pap.rst
scripts/: README.rst  dalek_fitter
