[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
doctest_plus = disabled
doctest_rst = disabled
minversion = 2.2
norecursedirs = build docs/_build



[metadata]
package_name = dalek
description = Parallel an Fitting Framework for TARDIS
long_description = xxx
author = Dalek collaboration
author_email = johndoe@nowhere.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = wkerzendorf/dalek

